...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
                   <!--                event title-->
                   <TextView
                       android:id="@+id/tv_event_title"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
...
                   <!--                event description-->
                   <TextView
                       android:id="@+id/tv_event_description"
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
...
                   <!--                event name-->
                   <LinearLayout
                       android:id="@+id/btn_event_update_title"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
...

                       <TextView
                           android:id="@+id/tv_event_update_title"
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
...

                       <TextView
                           android:id="@+id/tv_event_update_status"
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
...

                       <TextView
                           android:id="@+id/tv_event_update_endTime"
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
...

                       <TextView
                           android:id="@+id/tv_event_update_registry_endTime"
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
...

                   <LinearLayout
                       android:id="@+id/btn_event_update_description"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
...
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:text="Description"
                           android:textColor="@color/black"
                           android:textSize="16sp"/>
...

                           <TextView
                               android:id="@+id/tv_event_update_description"
                               android:layout_width="0dp"
                               android:layout_weight="1"
...
               <!-- Geolocation requirement toggle -->
               <LinearLayout
                   android:id="@+id/btn_event_update_geolocation"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
...

                   <com.google.android.material.switchmaterial.SwitchMaterial
                       android:id="@+id/switch_event_geolocation_required"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
...
