<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ualberta.eventlottery.organzier.OrganizerMainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!--    header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="Created Events"
                    android:textSize="@dimen/text_size_headline"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/rounded_md"
                android:backgroundTint="@color/btn_dark_light"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create Event"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

        <!--   cards -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <!--        card-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardWaitingList"
                android:layout_width="110dp"
                android:layout_height="150dp"
                android:layout_margin="6dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_full"
                        android:backgroundTint="@color/blue_light"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_event_available_24dp_000000_fill0_wght400_grad0_opsz24"
                            app:tint="@color/blue_deep" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_total_events"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Total Events"
                        android:textColor="#888888"
                        android:textSize="14sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="110dp"
                android:layout_height="150dp"
                android:layout_margin="6dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
                app:layout_constraintStart_toEndOf="@+id/cardWaitingList"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_full"
                        android:backgroundTint="@color/green_light"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_group_24dp_000000_fill0_wght400_grad0_opsz24"
                            app:tint="@color/green_deep" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_total_entrants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Total Entrants"
                        android:textColor="#888888"
                        android:textSize="14sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="110dp"
                android:layout_height="150dp"
                android:layout_margin="6dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_full"
                        android:backgroundTint="@color/orange_light"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_query_stats_24dp_000000_fill0_wght400_grad0_opsz24"
                            app:tint="@color/orange_deep" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_full_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Full rate"
                        android:textColor="#888888"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    Event List-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <!--     tittle  -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Events"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <ListView
                android:id="@+id/lv_organzier_event_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>