...
                        android:text="Require Geolocation"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/text_size_body"
                        android:textStyle="bold" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_geolocation_required"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />
                </LinearLayout>
            </LinearLayout>

...
